--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -1,52 +1,65 @@
 .main {
-    display: flex;
-    height: 100vh;
+  display: flex;
+  height: 100vh;
 }
 
 .side-bar {
-    background: black;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem 2rem;
-    justify-content: space-between;
+  background: black;
+  display: flex;
+  flex-direction: column;
+  width: 6rem;
+  /* padding: 1rem 2rem; */
+  justify-content: space-between;
 }
 
 .side-bar img {
-    width: 25px;
+  width: 25px;
 }
 
 .content {
-    flex: 1;
-    background: rgb(36, 35, 35);
+  flex: 1;
+  background: rgb(36, 35, 35);
 }
 
 .side-bar .navigation-links {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
 }
 
 .nav-link {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    cursor: pointer;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
 }
 
 .side-bar .logo,
 .side-bar .git {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo img {
-    width: 50px;
+  width: 50px;
 }
 
 .git img {
-    width: 30px;
+  width: 30px;
+}
+
+.active {
+  background: rgba(255, 255, 255, 0.192);
+  border-left: 5px solid rgb(61, 202, 61);
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.wrapper {
+  padding: 1rem;
+  display: grid;
+  place-items: center;
 }
