--- a/src/components/Main/Content/contentStyles.css
+++ b/src/components/Main/Content/contentStyles.css
@@ -1,30 +1,45 @@
 .profile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 3rem;
-    gap: 20px;
-    color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3rem;
+  gap: 20px;
+  color: white;
 }
 
 .profile img {
-    width: 10rem;
-    height: 10rem;
-    border-radius: 50%;
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
 }
 
 .profile .details {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
 .details .followers,
 .details .following,
 .details .playlists {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.top-artists {
+  padding: 2rem 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  /* width: fit-content; */
+}
+
+.artists-images {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 160px));
+  gap: 1rem;
+  justify-content: space-evenly;
 }
