--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -1,6 +1,6 @@
 .main {
     display: flex;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .side-bar {
@@ -10,12 +10,10 @@
     width: 6rem;
     padding: 1rem 0;
     justify-content: space-between;
+    height: 100vh;
+    position: fixed;
+    left: 0;
 }
-
-
-/* .side-bar img {
-  width: 25px;
-} */
 
 .side-bar .navigation-links svg {
     width: 25px;
@@ -23,8 +21,12 @@
 }
 
 .content {
-    flex: 1;
+    /* flex: 1; */
     background: rgb(36, 35, 35);
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .side-bar .navigation-links {
@@ -68,4 +70,80 @@
     padding: 1rem;
     display: grid;
     place-items: center;
+}
+
+
+/* TopTracks and Track */
+
+.top-tracks {
+    padding: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 3em;
+    width: 70%;
+}
+
+.tracks-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+}
+
+
+/* Track */
+
+.track {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+}
+
+.basic {
+    display: flex;
+    gap: 20px;
+}
+
+.track img {
+    width: 50px;
+}
+
+.track-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    font-size: 14px;
+}
+
+.album-info {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    color: rgb(172, 170, 170);
+}
+
+.track-runtime {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.track-runtime p {
+    font-size: 12px;
+}
+
+a {
+    cursor: pointer;
+    text-decoration: none;
+    color: yellow;
 }
