--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -1,6 +1,6 @@
 .main {
     display: flex;
-    /* height: 100vh; */
+    min-height: 100vh;
 }
 
 .side-bar {
@@ -26,7 +26,7 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .side-bar .navigation-links {
@@ -146,4 +146,11 @@ a {
     cursor: pointer;
     text-decoration: none;
     color: yellow;
+}
+
+.dot {
+    background-color: rgb(172, 170, 170);
+    border-radius: 50%;
+    width: 2px;
+    height: 2px;
 }
