fixed top-tracks css.

--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -78,7 +78,7 @@
 .top-tracks {
     padding: 2em;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
     gap: 3em;
