--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,18 @@
 body {
   font-family: "Chakra Petch", sans-serif;
 }
+
+h1 {
+  font-size: 3em;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 2em;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 1em;
+  font-weight: 500;
+}
