play-pause done. login page color done. overflow-x

--- a/src/components/LogIn/index.css
+++ b/src/components/LogIn/index.css
@@ -1,5 +1,10 @@
 .root {
-    display: grid;
-    place-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100vh;
+    background-color: #242323;
+    color: white;
+    font-weight: 600;
+    flex-direction: column;
 }
