--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -178,3 +178,17 @@
     text-align: left;
     color: white;
 }
+
+.logout {
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+    border-radius: 25px;
+    padding: 0.5rem 2rem;
+    font-size: 26px;
+    outline: none;
+}
+
+.logout:hover {
+    cursor: pointer;
+}
